Opened 14 years ago

Closed 14 years ago

#7232 closed bug (fixed)

Screensaver unlock window is not localized

Reported by: deejam Owned by: jonas.kirilla
Priority: normal Milestone: R1
Component: Applications/Command Line Tools Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

The screensaver unlock window is not localized.

Attachments (1)

screensaver_unlock.png (20.2 KB ) - added by deejam 14 years ago.

Download all attachments as: .zip

Change History (4)

by deejam, 14 years ago

Attachment: screensaver_unlock.png added

comment:1 by diver, 14 years ago

Component: Add-Ons/Screen SaversApplications/Command Line Tools
Owner: changed from korli to nobody

That's because this unlock window is part of screen_blanker application which sits in /system/bin.

comment:2 by scottmc, 14 years ago

Owner: changed from nobody to jonas.kirilla
Status: newassigned

comment:3 by jonas.kirilla, 14 years ago

Resolution: fixed
Status: assignedclosed
Note: See TracTickets for help on using tickets.