Localization of Screensaver unlock window. Ticket #7232

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@41023 a95241bf-73f2-0310-859d-f6bbb57e9c96